<resources>

    <!-- Nombre App -->
    <string name="app_name">Rick and Morty</string>

    <!-- Login -->
    <string name="hintTextEmail">Correo electrónico</string>
    <string name="hintTextPassword">Contraseña</string>
    <string name="textLoginButton">Identificarse</string>
    <string name="registrate">No tienes cuenta? Regístrate</string>
    <string name="textEntraUniverso">Entra en nuestro universo</string>

    <!-- Registro -->
    <string name="edit_text_email">Correo electrónico</string>
    <string name="edit_text_password">Contraseña</string>
    <string name="registrar_text_button">Registrarse</string>
    <string name="text_irlogin_button">Ir a identificarse</string>

    <!-- Drawer -->
    <string name="open_drawer">De acuerdo</string>
    <string name="close_drawer">Cancelar</string>
    <string name="drawer_episodios">Episodios</string>
    <string name="drawer_estadisticas">Estadísticas</string>
    <string name="drawer_ajustes">Ajustes</string>
    <string name="drawer_about">Acerca de</string>

    <!-- Ajustes -->
    <string name="language_settings">Inglés / Castellano</string>
    <string name="text_idioma_settings">Idioma</string>
    <string name="text_tema_settings">Tema</string>
    <string name="switch_text_tema_settings">Claro / Oscuro</string>
    <string name="text_cerrar_sesion_settings">Cerrar sesión</string>

    <!-- Fragmento principal -->
    <string name="switch_text_todos_button">Todos</string>
    <string name="switch_text_vistos_button">Vistos</string>
    <string name="text_visto_gone">Visto</string>

    <!-- Episodios -->
    <string name="text_episode_name_detail">Nombre del episodio</string>
    <string name="text_codigo_episodio_fecha_details">S01E01 - Fecha</string>
    <string name="switch_text_visto_details">Marcar como visto</string>

    <!-- Personajes -->
    <string name="text_personaje_name_item">Nombre del personaje</string>
    <string name="text_estado_personaje_item">Estado</string>

    <!-- Estadísticas -->
    <string name="text_centro_grafico">Progreso</string>
    <string name="episodios_vistos">Has visto %1$d de %2$d episodios</string>
    <string name="porcentage_vistos">%1$d %% completado</string>
    <string name="text_vistos">Vistos</string>
    <string name="text_pendientes">Pendientes</string>

</resources>
