<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">

    <!-- Imagen -->
    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/rick_register" />

    <!-- Texto principal de register -->
    <TextView
        android:id="@+id/lRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/textEntraUniverso"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Campo de email con hint -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorOnPrimary"
        android:textSize="18sp" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorOnPrimary"
        android:textSize="18sp" />

    <!-- Botón registrar -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="?attr/colorTertiary"
        android:fontFamily="sans-serif"
        android:text="@string/registrar_text_button"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Botón volver a login -->
    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="?attr/colorTertiary"
        android:fontFamily="sans-serif"
        android:text="@string/text_irlogin_button"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
