<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/episodeDetailRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.episodes.EpisodeDetailFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Nombre del episodio -->
        <TextView
            android:id="@+id/tvEpisodeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_episode_name_detail"
            android:textColor="?attr/colorOnPrimary"
            android:background="?attr/colorPrimary"
            android:fontFamily="sans-serif"
            android:textSize="26sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:paddingStart="10dp" />

        <!-- Código y fecha del episodio -->
        <TextView
            android:id="@+id/tvEpisodeCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_codigo_episodio_fecha_details"
            android:textSize="18sp"
            android:textColor="?attr/colorTertiary"
            android:fontFamily="sans-serif"
            android:background="?attr/colorPrimary"
            android:padding="5dp"
            android:paddingStart="10dp" />

        <!-- Switch para marcar episodio como visto -->
        <Switch
            android:id="@+id/switchViewed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_text_visto_details"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:textColor="?attr/colorOnPrimary"
            android:background="?attr/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <!-- RecyclerView para listar personajes del episodio -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="?attr/colorPrimary"
            android:scrollbars="vertical" />

    </LinearLayout>

</ScrollView>
